[package]
name = "raycast"
version = "0.1.0"
authors = ["Stef Busking <stef.busking@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
image = "0.23.13"
progress = "0.2.0"
rayon = "1.5.0"
ultraviolet = "0.8.1"
